0. - 회원가입 인터페이스 적용 1. - 회원가입 입력 후 루틴 변경(입력 완료시 다음 flow 진행 될 수 있도록 변경) 2. - back key 영역 확장.      (설정, 쿠폰, 내정보, 추천인 관리, 공지사항, 공지사항 상세, 차량정보, 포인트 리스트)      (이용내역 상세, 예역취소, 주소검색, 요일 선택, 시간선택, 결재 화면) 3. - 버전정보 연동 4. - 결재 인터페이스 적용 5. - 대리점 정보 및 시간 인터페이스 적용 6. - 결재 응답 인터페이스 추가

--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -14,16 +14,23 @@
         tools:ignore="MissingConstraints">
 
         <!-- ActionBar : Back / Title / Info -->
-        <ImageView
-            android:id="@+id/notice_btnPrev"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="32dp"
-            android:contentDescription="@string/actionbar_prev_icon_description"
+        <LinearLayout
+            android:id="@+id/notice_btnPrev_layout"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:gravity="center|center_horizontal|center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/prev_image_selector" />
+            app:layout_constraintTop_toTopOf="parent">
+            <ImageView
+                android:id="@+id/notice_btnPrev"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:contentDescription="@string/actionbar_prev_icon_description"
+                android:src="@drawable/prev_image_selector" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/myinfo_title_activity"
@@ -35,7 +42,7 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/notice_btnPrev"
+            app:layout_constraintStart_toStartOf="@+id/notice_btnPrev_layout"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
