--- a/app/src/main/res/layout/actionbar_back_layout.xml
+++ b/app/src/main/res/layout/actionbar_back_layout.xml
@@ -7,15 +7,21 @@
     tools:context=".PointHistoryActivity">
 
     <!-- ActionBar : Back -->
-    <ImageView
-        android:id="@+id/btnPrev"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="24dp"
-        android:contentDescription="@string/actionbar_prev_icon_description"
+    <LinearLayout
+        android:id="@+id/btnPrev_layout1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="12dp"
+        android:layout_gravity="center|center_horizontal|center_vertical"
+        android:gravity="center|center_horizontal|center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/prev_image_selector" />
-
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/btnPrev"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:contentDescription="@string/actionbar_prev_icon_description"
+            android:src="@drawable/prev_image_selector" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
