--- a/app/src/main/res/layout/actionbar_info_layout.xml
+++ b/app/src/main/res/layout/actionbar_info_layout.xml
@@ -7,17 +7,23 @@
     tools:context=".PointHistoryActivity">
 
     <!-- ActionBar : Back / Title / Info -->
-    <ImageView
-        android:id="@+id/btnPrev"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="24dp"
-        android:contentDescription="@string/actionbar_prev_icon_description"
+    <LinearLayout
+        android:id="@+id/btnPrev_layout"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_gravity="center|center_horizontal|center_vertical"
+        android:gravity="center|center_horizontal|center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/prev_image_selector" />
-
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/btnPrev"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:contentDescription="@string/actionbar_prev_icon_description"
+            android:src="@drawable/prev_image_selector" />
+    </LinearLayout>
     <TextView
         android:id="@+id/title_activity"
         android:layout_width="0dp"
@@ -26,7 +32,7 @@
         android:text="@string/title_point_history"
         android:textColor="#3e3e3e"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/btnPrev"
+        app:layout_constraintStart_toEndOf="@id/btnPrev_layout"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btnNext"
         app:layout_constraintBottom_toBottomOf="parent"
