--- a/app/src/main/res/layout/activity_car_manage.xml
+++ b/app/src/main/res/layout/activity_car_manage.xml
@@ -14,16 +14,23 @@
         tools:ignore="MissingConstraints">
 
         <!-- ActionBar : Back / Title / Info -->
-        <ImageView
-            android:id="@+id/car_manage_btnPrev"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="32dp"
-            android:contentDescription="@string/actionbar_prev_icon_description"
+        <LinearLayout
+            android:id="@+id/car_manage_btnPrev_layout"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:gravity="center|center_horizontal|center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/prev_image_selector" />
+            app:layout_constraintTop_toTopOf="parent">
+            <ImageView
+                android:id="@+id/car_manage_btnPrev"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:contentDescription="@string/actionbar_prev_icon_description"
+                android:src="@drawable/prev_image_selector" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/card_title_activity"
@@ -38,17 +45,24 @@
             app:layout_constraintStart_toStartOf="@+id/car_manage_include"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/car_manage_btnNext"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <LinearLayout
+            android:id="@+id/car_manage_btnNext_layout"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="24dp"
-            android:contentDescription="@string/actionbar_next_icon_description"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:gravity="center|center_horizontal|center_vertical"
             app:layout_constraintStart_toEndOf="@+id/title_activity"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:srcCompat="@drawable/plus" />
+            app:layout_constraintBottom_toBottomOf="parent">
+            <ImageView
+                android:id="@+id/car_manage_btnNext"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="@string/actionbar_next_icon_description"
+                app:srcCompat="@drawable/plus" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
