--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -124,7 +124,9 @@
             android:background="@null"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:nextFocusDown="@+id/new_password2"
+            android:inputType="textPassword"
+            android:imeOptions="actionNext"/>
     </LinearLayout>
 
     <!-- 새 비밀번호 확인 입력 -->
@@ -256,6 +258,7 @@
             android:ems="10"
             android:hint="@string/hint_new_password2"
             android:inputType="textPassword"
+            android:imeOptions="actionDone"
             android:background="@null"
             android:textColor="#3E3E3E"
             android:textSize="14sp" />
