--- a/app/src/main/res/layout/activity_use_delete_settle.xml
+++ b/app/src/main/res/layout/activity_use_delete_settle.xml
@@ -14,17 +14,23 @@
         tools:ignore="MissingConstraints">
 
         <!-- ActionBar : Back / Title / Info -->
-        <ImageView
-            android:id="@+id/use_delete_settle_btnPrev"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="32dp"
-            android:contentDescription="@string/actionbar_prev_icon_description"
+        <LinearLayout
+            android:id="@+id/use_delete_settle_btnPrev_layout"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:gravity="center|center_horizontal|center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/prev_image_selector" />
-
+            app:layout_constraintTop_toTopOf="parent">
+            <ImageView
+                android:id="@+id/use_delete_settle_btnPrev"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:contentDescription="@string/actionbar_prev_icon_description"
+                android:src="@drawable/prev_image_selector" />
+        </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,7 +40,7 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/use_delete_settle_btnPrev"
+            app:layout_constraintStart_toStartOf="@+id/use_delete_settle_btnPrev_layout"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
