--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -290,7 +290,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/discount_point" />
 
-                <!-- TODO : 포인트 사용 금액 EditBox style change -->
+                <!-- 포인트 사용 금액 EditBox style change -->
                 <EditText
                     android:id="@+id/use_point"
                     android:layout_width="120dp"
